@@ -2,6 +2,8 @@
 
 Trabalho Final da disciplina de POO desenvolvido por mim, [Luiz Eduardo](https://github.com/Luiz-Eduardo-BL) e [Hugo Santos](https://github.com/hugosantosbessa).
 
+***Para rodar o arquivo Jar, precisa executar pelo terminal
+
 Nessa aplicação, o usuário poderá se registrar, passando o seu nome, cpf, um nome de usuário e senha, que será utilizado para fazer o login no sistema, essas informações serão armazenadas e lidas de um arquivo clientesFiles.txt, dentro do sistema o mesmo poderá criar sua lista de compras, adicionando itens, que serão lidos de um arquivo itensDeposito.txt,  dentro deste arquivo estarão todos os produtos (Itens) contendo seu respectivo número, nome e preço, o usuario tambem tera um desconto relacionado ao seu total de compras, a cada 100 R$ tera 10% de desconto, com um limite de 30% de desconto possível, será apresentado um valor total sem desconto e um com desconto para fins de comparação para o cliente.
 Existem também as classes que se encontram na pasta Services, que são classes exclusivas para validação dos clientes, como a ServicesCliente, para alertas e para leitura e escrita das informações nos respectivos arquivos txt.
 
@@ -33,3 +35,12 @@ Existem também as classes que se encontram na pasta Services, que são classes 
 
 ## Diagrama UML
 ![](/out/diagrama/diagrama.png)
+
+## Rodar arquivo Jar
+
+Para rodar o arquivo `.Jar` utilize o codigo abaixo no terminal e na pasta onde se encontra o arquivo.
+
+`
+java --module-path (Caminho JavaFX)  --add-modules javafx.controls,javafx.base,javafx.fxml,javafx.graphics,javafx.media,javafx.web -jar (arquivo).jar
+`
+
